2006-09-11  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (main): Set a new session id for the childs.

2006-07-10  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/ui.h: Renamed to ...
	* launcher/booster.h: ... here. Fix all includers.
	(ui_state): Renamed to ...
	(booster_state_t): ... this. Fix all users.
	(ui_daemon_init): Renamed to ...
	(booster_preinit): ... this. Fix all users.
	(ui_client_init): Renamed to ...
	(booster_init): ... this. Fix all users.
	(ui_state_reload): Renamed to ...
	(booster_reload): ... this. Fix all users.
	* launcher/ui_gtk.h: Renamed to ...
	* launcher/booster_gtk.h: ... this.
	* launcher/ui_gtk.c: Renamed to ...
	* launcher/booster_gtk.c: ... this.
	* Makefile.am (maemo_launcher_SOURCES): Rename ui.h, ui_gtk.h and
	ui_gtk.c to booster.h, booster_gtk.h and booster_gtk.c.

2006-07-05  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac (HAVE_PRCTL_SET_NAME): New check.
	* launcher/launcher.c: Move the "config.h" include to the top.
	[HAVE_PRCTL_SET_NAME]: Include <sys/prctl.h>.
	(set_process_name): New function.
	(set_progname): Use set_process_name.

2006-07-03  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.18~.

2006-06-19  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.17.

2006-06-19  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (send_app_died): New variable, false by default.
	(release_child_slot): Only send the signal if send_app_died is true.
	(main): Add new '--send-app-died' argument.

2006-06-15  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.16.

2006-06-15  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (sigs_init): Ignore SIGPIPE.
	(sig_restore): Set SIGPIPE to the default handler.

2006-06-15  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.16~.

2006-06-09  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.15.
