@@ -1,5 +1,10 @@
 2006-09-11  Guillem Jover  <guillem.jover@nokia.com>
 
+	* launcher/launcher.c (rise_oom_defense): Use pid_t for pid variables.
+	(invoked_send_pid): Likewise.
+
+2006-09-11  Guillem Jover  <guillem.jover@nokia.com>
+
 	* launcher/launcher.c (main): Set a new session id for the childs.
 
 2006-07-10  Guillem Jover  <guillem.jover@nokia.com>
